--- a/index.html
+++ b/index.html
@@ -1,12 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=s, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+
+<html lang="pt-br">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>2° Parte dop Curriculo</title>
+        <link rel="stylesheet" href="style.tar.cri.css">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
+    <body class="container">
+
+        <header>
+            <h1>Curriculo</h1>
+            <br><br>
+            <img src="/img/legiao_lObZ0Lkv79ih.jpg.webp">
+            <br><br>
+            <h1>Rafaeli Turci</h1>
+
+            <br><br><br>
+        </header>
+
+        <section>
+            <h3><b>Dados Pessoais</b></h3>
+            <ul>
+                <li>18 anos</li>
+                <li>Solteira</li>
+                <li>*Brasileira*</li>
+            </ul>
+        </section>
+        <section>
+            <h3><b>Contato</b></h3>
+            <ul>
+                <li><b>Telefone:</b> (16) 988743309</li>
+                <li><b>Email:</b> rafaeliturci098@gmail.com</li>
+                <li>Monte Alto – SP, CEP: 00000-000</li>
+            </ul>
+        </section>
+
+        <section>
+            <h3><b>Formação Profissional</b></h3>
+            <ol>
+                <li><b>Técnico em marketing,</b> integrado ao ensino médio, na
+                    Etec Alcides Cestari,<br>Fev/2019 - Dez/2021 (concluído)</li>
+                <br>
+                <li><b>Operador de computador,</b> na Prepara Cursos Monte Alto,<br>Fev/2021
+                    – jun/2022 (concluído)</li>
+                <br>
+                <li><b>Sistemas para Internet,</b> Fatec Taquaritinga,<br>Fev/2022
+                    – Dez/2024 (cursando)</li>
+            </ol>
+        </section>
+        <section>
+            <h3><b>Experiencia Profissional</b></h3>
+            <ul>
+                <li>Desempregada e sem experiência</li>
+                <li>Procurando uma oportunidade de estagio</li>
+            </ul>
+        </section>
+        <section>
+            <h3><b>Habilidades</b></h3>
+            <ul>
+                <li><b>*DESCONHECIDAS POR FALTA DE ESPERIENCIA*</b></li>
+            </ul>
+        </section>
+        <section>
+            <h3><b>Hobbies</b></h3>
+            <ol>
+                <li><b>Dependente musical -</b> me consentro e relaxo melhor
+                    ouvindo musica.</li>
+                <br>
+                <li><b>Arte Digital -</b> gosto muito de desenhar seja digitais
+                    ou em papel,<br>Normalmente desenho perçonagens baseados em
+                    animes, mangas, livros ou da minha imaginação.</li>
+                <br>
+                <li><b>Leitora voraz -</b> Amo ler, seja livro fisico, ebooks,
+                    novels, mangas,<br>Meus generos favoritos são aventura,
+                    ação, suspense, sobrenatural e romance.</li>
+            </ol>
+        </section>
+
+        <footer>
+            <h4>Redes sociais</h4>
+            <ul>
+                <li><b>Facebook:</b> Rafa Turci</li>
+                <li><b>Instagram</b> @faeli_turci</li>
+            </ul>
+        </footer>
+    </body>
 </html>
